# FlowUtils

./: MANIFEST.in  README.md  benchmark_suite.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  tests_develop.yml  tests_master.yml  wheels.yml
examples/: fcs_comparison_notebook.ipynb  fcs_example.py  simple_example.py  transforms_example.py
flowutils/: __init__.py  transforms.py  transforms_old.py  transforms_pure.py
flowutils/tests/: __init__.py  test_fcs_data.py  transform_tests.py
